добавлена листовка МАБС на страницу продакт.

--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon.png" />
     <link rel="stylesheet" type="text/css" href="./styles/main.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/main2.css" />
     <script type="text/javascript" src="./scripts/lib/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="./scripts/index.js"></script>
   </head>
@@ -62,18 +63,16 @@
           veritatis, quae doloribus quisquam consequatur omnis voluptas dicta in hic, voluptatibus corrupti temporibus
           fugit est molestiae officia quidem. Obcaecati voluptates expedita possimus eveniet veritatis recusandae
           dolores provident nesciunt deleniti odit quod voluptatum, qui, sint ducimus nulla ratione deserunt quae quo
-          vitae asperiores officiis incidunt ex. Voluptatem exercitationem corrupti expedita molestias consequuntur!
-          Unde distinctio perspiciatis reprehenderit, quasi minus ipsum nemo exercitationem fugit eum mollitia libero
-          blanditiis molestias doloribus atque minima quam ducimus tempore sequi. Sint, ipsa repudiandae cum numquam
-          reiciendis exercitationem dicta, cumque necessitatibus explicabo, nihil fugiat.
+          vitae asperiores officiis incidunt ex.
         </p>
       </section>
-      <section class="solutions section-center">
+
+      <!-- <section class="solutions section-center">
         <div class="solutions__item solutions__item-selected">
           <div class="item__row">
             <div class="item__title">
               <span class="number">01/</span>
-              <p class="title">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+              <p class="title">Мобильная автономная базовая станция</p>
             </div>
             <div class="item__buttons">
               <div class="item__close"></div>
@@ -82,15 +81,149 @@
           </div>
           <div class="item__row2">
             <div class="item__description">
-              <p class="item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, doloribus.</p>
               <p class="item__text">
-                Voluptatem exercitationem corrupti expedita molestias consequuntur! Unde distinctio perspiciatis
-                reprehenderit, quasi minus ipsum nemo exercitationem fugit eum mollitia libero blanditiis molestias
-                doloribus atque minima quam ducimus tempore sequi.
+                Мобильная автономная базовая станция (МАБС) предназначена для обеспечения бесперебойной работы активного
+                оборудования беспроводной связи, видеонаблюдения, телеметрии, метеорологии и др. функционала в удаленных
+                труднодоступных локациях, где отсутствует возможность подключения к энергосети или иным источникам
+                постоянного энергоснабжения.
+              </p>
+              <p class="item__text">
+                Мобильная автономная базовая станция (МАБС) предназначена для обеспечения бесперебойной работы активного
+                оборудования беспроводной связи, видеонаблюдения, телеметрии, метеорологии и др. функционала в удаленных
+                труднодоступных локациях, где отсутствует возможность подключения к энергосети или иным источникам
+                постоянного энергоснабжения.
               </p>
             </div>
           </div>
           <img src="./images/products/product1.jpg" alt="MABS" />
+        </div>
+      </section> -->
+
+      <section class="product section-center">
+        <span class="number">01/</span>
+        <div>
+          <div class="product-title">
+            <div>Мобильная автономная базовая станция</div>
+          </div>
+
+          <div class="product-description1">
+            <div class="product-description1_left">
+              <div class="product-text">
+                Мобильная автономная базовая станция (МАБС) предназначена для обеспечения бесперебойной работы активного
+                оборудования беспроводной связи, видеонаблюдения, телеметрии, метеорологии и др. функционала в удаленных
+                труднодоступных локациях, где отсутствует возможность подключения к энергосети или иным источникам
+                постоянного энергоснабжения.
+              </div>
+              <div class="product-subtitle">Конструктивные особенности</div>
+              <div class="product-text">
+                Основу комплекса МАБС составляет система независимого энергообеспечения с функцией удаленного
+                мониторинга и управления с веб-интерфейсом, скомпонованная в термоизолированном кунге на базе двухосного
+                автомобильного полуприцепа на усиленном шасси, обеспечивающая возможность удобной транспортировки и
+                развертывания в труднодоступных регионах. Комплекс оснащён складной телескопической мачтой для
+                размещения оборудования различного назначения, а также выдвижными аутригерами для повышения устойчивости
+                к внешним климатическим нагрузкам и разгрузки пневмоколёс. Защитный кожух ДГУ снижает уровень шумового
+                воздействия, а продуманная эргономика обепечивает простоту обслуживания комплекса.
+              </div>
+            </div>
+            <div class="product-description1_right">
+              <img src="./images/products/mabs.jpg" alt="mabs" />
+            </div>
+          </div>
+
+          <div class="product-description2">
+            <div class="product-description2_left">
+              <div class="product-subtitle">Ключевые элементы несущей конструкции МАБС:</div>
+              <div class="product-text">
+                &#9658; усиленная алюминиевая телескопическая мачта (высота подъема до 9 м) с грузоподъемностью до 95 кг
+              </div>
+              <div class="product-text">
+                &#9658; регулируемые выдвижные распорки (аутригеры и тросовые растяжки для дополнительной стабилизации)
+              </div>
+              <div class="product-text">
+                &#9658; модульная усиленная рама с утепленным отсеком для размещения энергоустановки
+              </div>
+            </div>
+            <div class="product-description2_right">
+              <div class="product-subtitle">Энергоустановка</div>
+              <br />
+              <div class="product-text">&#9658; ДГУ с автономным подогревателем</div>
+              <div class="product-text">&#9658; монокристаллические солнечные панели</div>
+              <div class="product-text">&#9658; блок аккумуляторных накопителей энергии</div>
+              <div class="product-text">&#9658; ветрогерератор</div>
+              <div class="product-text">
+                &#9658; система климатического контроля для поддержания рабочего температурного режима
+              </div>
+            </div>
+          </div>
+
+          <div class="product-description3">
+            <div class="product-subtitle">Режим работы</div>
+            <div class="product-text" style="width: 50%">
+              Установка способна функционировать в непрерывном режиме круглый год. Предусмотрены следующие сценарии
+              энергообеспечения:
+            </div>
+            <div class="product-description3_table">
+              <div class="product-text" style="grid-area: 1/1/5/2">&#9658;</div>
+              <div class="product-text" style="grid-area: 1/2/2/3">Автономный режим (до 48 часов)</div>
+              <div class="product-text" style="grid-area: 2/2/3/3">питание от дизельного генератора;</div>
+              <div class="product-text" style="grid-area: 3/2/4/3">одновременная зарядка аккумуляторных батарей;</div>
+              <div class="product-text" style="grid-area: 4/2/5/3">
+                переход на питание от АКБ при отключении генератора;
+              </div>
+              <div class="product-text" style="grid-area: 1/3/5/4">&#9658;</div>
+              <div class="product-text" style="grid-area: 1/4/2/5">Внешнее питание — возможность подключения к:</div>
+              <div class="product-text" style="grid-area: 2/4/3/5">дизельной генераторной установке (ДГУ);</div>
+              <div class="product-text" style="grid-area: 3/4/4/5">сети 220 В / 50 Гц;</div>
+              <div class="product-text" style="grid-area: 4/4/5/5">
+                линейному питанию 220 В (при нахождении вблизи источников электроэнергии).
+              </div>
+            </div>
+            <div class="product-description3_table2">
+              <div class="product-text" style="grid-area: 1/1/2/2">&#9658;</div>
+              <div class="product-text" style="grid-area: 1/2/2/3">
+                Гибридный режим (система «Инвертор + АКБ + солнечные панели»)
+              </div>
+              <div class="product-text" style="grid-area: 2/2/3/3">
+                автоматический запуск генератора при снижении напряжения АКБ до 47 В;
+              </div>
+            </div>
+          </div>
+
+          <div class="product-description4">
+            <div class="product-subtitle" style="width: 60%">
+              Большой спектр дополнительного оборудования может быть обеспечен по запросу заказчика, <br> в том числе:
+            </div>
+
+            <div class="product-description4_table">
+              <div class="product-text" style="grid-area: 1/1/2/2">&#9658;</div>
+              <div class="product-text" style="grid-area: 1/2/2/3">
+                системы видеонаблюдения за проведением работ на стройплощадках, карьерах и месторождениях
+              </div>
+
+              <div class="product-text" style="grid-area: 1/3/2/4">&#9658;</div>
+              <div class="product-text" style="grid-area: 1/4/2/5">
+                световое оборудование (с различными вариациями осветительных приборов и площади их освещения)
+              </div>
+
+              <div class="product-text" style="grid-area: 2/1/3/2">&#9658;</div>
+              <div class="product-text" style="grid-area: 2/2/3/3">
+                радиооборудование (приемопередающие устройства различных диапазонов для создания точки уверенного приема
+                и увеличения зоны покрытия связи)
+              </div>
+
+              <div class="product-text" style="grid-area: 2/3/3/4">&#9658;</div>
+              <div class="product-text" style="grid-area: 2/4/3/5">организация удаленного рабочего места</div>
+              
+              <div class="product-text" style="grid-area: 3/1/4/2">&#9658;</div>
+              <div class="product-text" style="grid-area: 3/2/4/3">другие опции</div>
+            </div>
+
+            <div class="product-subtitle">Дополнительные возможности</div>
+            <div class="product-text" style="width: 70%">
+              Система телеметрии с модулем удаленного контроля и управления комплексом обеспечивает мониторинг состояния
+              комплекса в режиме реального времени
+            </div>
+          </div>
         </div>
       </section>
 
