--- a/products.html
+++ b/products.html
@@ -99,11 +99,11 @@
         </div>
       </section> -->
 
-      <section class="product section-center">
+      <section class="product section-wrapper">
         <span class="number">01/</span>
-        <div>
+        <div class="product-item">
           <div class="product-title">
-            <div>Мобильная автономная базовая станция</div>
+            <p class="title">Мобильная автономная базовая станция</p>
           </div>
 
           <div class="product-description1">
@@ -126,7 +126,8 @@
               </div>
             </div>
             <div class="product-description1_right">
-              <img src="./images/products/mabs.jpg" alt="mabs" />
+              <!-- <img src="./images/products/mabs.jpg" alt="mabs" /> -->
+              <img style="width: 100%" src="./images/products/product1.jpg" alt="mabs1" />
             </div>
           </div>
 
@@ -158,11 +159,34 @@
 
           <div class="product-description3">
             <div class="product-subtitle">Режим работы</div>
-            <div class="product-text" style="width: 50%">
+            <div class="product-text">
               Установка способна функционировать в непрерывном режиме круглый год. Предусмотрены следующие сценарии
               энергообеспечения:
             </div>
             <div class="product-description3_table">
+              <div class="product-description3_table__left">
+                <div class="product-text">&#9658;</div>
+                <div>
+                  <div class="product-text">Автономный режим (до 48 часов)</div>
+                  <div class="product-text">питание от дизельного генератора;</div>
+                  <div class="product-text">одновременная зарядка аккумуляторных батарей;</div>
+                  <div class="product-text">переход на питание от АКБ при отключении генератора;</div>
+                </div>
+              </div>
+
+              <div class="product-description3_table__right">
+                <div class="product-text">&#9658;</div>
+                <div>
+                  <div class="product-text">Внешнее питание — возможность подключения к:</div>
+                  <div class="product-text">дизельной генераторной установке (ДГУ);</div>
+                  <div class="product-text">сети 220 В / 50 Гц;</div>
+                  <div class="product-text">
+                    линейному питанию 220 В (при нахождении вблизи источников электроэнергии).
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="product-description3_table">
               <div class="product-text" style="grid-area: 1/1/5/2">&#9658;</div>
               <div class="product-text" style="grid-area: 1/2/2/3">Автономный режим (до 48 часов)</div>
               <div class="product-text" style="grid-area: 2/2/3/3">питание от дизельного генератора;</div>
@@ -177,8 +201,9 @@
               <div class="product-text" style="grid-area: 4/4/5/5">
                 линейному питанию 220 В (при нахождении вблизи источников электроэнергии).
               </div>
-            </div>
-            <div class="product-description3_table2">
+            </div> -->
+
+            <!-- <div class="product-description3_table2">
               <div class="product-text" style="grid-area: 1/1/2/2">&#9658;</div>
               <div class="product-text" style="grid-area: 1/2/2/3">
                 Гибридный режим (система «Инвертор + АКБ + солнечные панели»)
@@ -186,15 +211,43 @@
               <div class="product-text" style="grid-area: 2/2/3/3">
                 автоматический запуск генератора при снижении напряжения АКБ до 47 В;
               </div>
+            </div> -->
+
+            <div class="product-description3_table2">
+              <div class="product-text">&#9658;</div>
+              <div>
+                <div class="product-text">Гибридный режим (система «Инвертор + АКБ + солнечные панели»)</div>
+                <div class="product-text">автоматический запуск генератора при снижении напряжения АКБ до 47 В;</div>
+              </div>
             </div>
           </div>
 
           <div class="product-description4">
-            <div class="product-subtitle" style="width: 60%">
-              Большой спектр дополнительного оборудования может быть обеспечен по запросу заказчика, <br> в том числе:
+            <div class="product-subtitle">
+              Большой спектр дополнительного оборудования может быть обеспечен по запросу заказчика, в том числе:
             </div>
 
             <div class="product-description4_table">
+              <div>
+                <div class="product-text">
+                  &#9658; системы видеонаблюдения за проведением работ на стройплощадках, карьерах и месторождениях
+                </div>
+                <div class="product-text">
+                  &#9658; радиооборудование (приемопередающие устройства различных диапазонов для создания точки
+                  уверенного приема и увеличения зоны покрытия связи)
+                </div>
+              </div>
+
+              <div>
+                <div class="product-text">
+                  &#9658; световое оборудование (с различными вариациями осветительных приборов и площади их освещения)
+                </div>
+                <div class="product-text">&#9658; организация удаленного рабочего места</div>
+              </div>
+            </div>
+            <div class="product-text">&#9658; другие опции</div>
+
+            <!-- <div class="product-description4_table">
               <div class="product-text" style="grid-area: 1/1/2/2">&#9658;</div>
               <div class="product-text" style="grid-area: 1/2/2/3">
                 системы видеонаблюдения за проведением работ на стройплощадках, карьерах и месторождениях
@@ -213,13 +266,13 @@
 
               <div class="product-text" style="grid-area: 2/3/3/4">&#9658;</div>
               <div class="product-text" style="grid-area: 2/4/3/5">организация удаленного рабочего места</div>
-              
+
               <div class="product-text" style="grid-area: 3/1/4/2">&#9658;</div>
               <div class="product-text" style="grid-area: 3/2/4/3">другие опции</div>
-            </div>
+            </div> -->
 
             <div class="product-subtitle">Дополнительные возможности</div>
-            <div class="product-text" style="width: 70%">
+            <div class="product-text">
               Система телеметрии с модулем удаленного контроля и управления комплексом обеспечивает мониторинг состояния
               комплекса в режиме реального времени
             </div>
@@ -314,6 +367,7 @@
           <a class="footer__email" href="mailto:info@sequtel.ru">info@sequtel.ru</a>
         </div>
       </div>
+
       <!-- Yandex.Metrika counter -->
       <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
