--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="./scripts/lib/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="./scripts/index.js"></script>
   </head>
+    
   <body class="background-page">
     <header class="header section-wrapper">
       <a class="header__logo" href="./index.html">
@@ -52,6 +53,7 @@
         </li>
       </ul>
     </header>
+
     <main>
       <section class="services section-center">
         <img class="title__teletower" src="./images/aboutUs/TeleTower.png" alt="TeleTower" />
@@ -523,6 +525,7 @@
         </div>
       </section>
     </main>
+
     <footer class="footer">
       <div class="footer__logo">
         <img class="logo" src="./images/footerLogo.svg" alt="logo" width="28px" height="146px" />
@@ -549,11 +552,11 @@
               (m[i].a = m[i].a || []).push(arguments);
             };
           m[i].l = 1 * new Date();
-          (k = e.createElement(t)),
+          ((k = e.createElement(t)),
             (a = e.getElementsByTagName(t)[0]),
             (k.async = 1),
             (k.src = r),
-            a.parentNode.insertBefore(k, a);
+            a.parentNode.insertBefore(k, a));
         })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
 
         ym(77759518, 'init', {
