--- a/about-us.html
+++ b/about-us.html
@@ -250,7 +250,9 @@
           </div>
 
           <div class="our-clients__item">
-            <img src="./images/index/BKE.svg" alt="бке" width="280px" height="auto" />
+            <a href="./pdf/bke.pdf" target="_blank">
+              <img src="./images/index/BKE.svg" alt="бке" width="280px" height="auto" />
+            </a>
           </div>
 
           <div class="our-clients__item">
