--- a/contacts.html
+++ b/contacts.html
@@ -36,15 +36,15 @@
           <a class="nav__link" href="./about-us.html">О компании</a>
         </li>
         <li class="nav__item">
-          <span class="nav__number">/03</span>
-          <a class="nav__link" href="./services.html">Продукты</a>
+          <span class="nav__number">/02</span>
+          <a class="nav__link" href="./products.html">Продукты</a>
         </li>
         <li class="nav__item">
-          <span class="nav__number">/02</span>
+          <span class="nav__number">/03</span>
           <a class="nav__link" href="./services.html">Услуги</a>
         </li>
         <li class="nav__item">
-          <span class="nav__number">/03</span>
+          <span class="nav__number">/04</span>
           <a class="nav__link" href="./project.html">Проекты</a>
         </li>
         <!-- <li class="nav__item">
@@ -56,7 +56,7 @@
             <a class="nav__link" href="./vacancies.html">Вакансии</a>
         </li> -->
         <li class="nav__item">
-          <span class="nav__number">/04</span>
+          <span class="nav__number">/05</span>
           <a class="nav__link" href="./contacts.html">Контакты</a>
         </li>
       </ul>
