--- a/products.html
+++ b/products.html
@@ -55,16 +55,16 @@
     </header>
 
     <main>
-      <section class="services section-center">
+      <section class="products section-center">
         <img class="title__teletower" src="./images/aboutUs/TeleTower.png" alt="TeleTower" />
         <h6 class="title">Продукты</h6>
-        <p class="title__text">
+        <!-- <p class="title__text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ea maiores quidem aperiam? Perferendis
           veritatis, quae doloribus quisquam consequatur omnis voluptas dicta in hic, voluptatibus corrupti temporibus
           fugit est molestiae officia quidem. Obcaecati voluptates expedita possimus eveniet veritatis recusandae
           dolores provident nesciunt deleniti odit quod voluptatum, qui, sint ducimus nulla ratione deserunt quae quo
           vitae asperiores officiis incidunt ex.
-        </p>
+        </p> -->
       </section>
 
       <!-- <section class="solutions section-center">
@@ -100,10 +100,16 @@
       </section> -->
 
       <section class="product section-wrapper">
-        <span class="number">01/</span>
         <div class="product-item">
-          <div class="product-title">
-            <p class="title">Мобильная автономная базовая станция</p>
+          <div class="item__row">
+            <div class="product-title">
+              <span class="number">01/</span>
+              <p class="title">Мобильная автономная базовая станция</p>
+            </div>
+            <div class="item__buttons">
+              <div class="item__close"></div>
+              <div class="item__arrow"></div>
+            </div>
           </div>
 
           <div class="product-description1">
@@ -334,7 +340,9 @@
           </div>
 
           <div class="our-clients__item">
-            <img src="./images/index/BKE.svg" alt="бке" width="280px" height="auto" />
+            <a href="./pdf/bke.pdf" target="_blank">
+              <img src="./images/index/BKE.svg" alt="бке" width="280px" height="auto" />
+            </a>
           </div>
 
           <div class="our-clients__item">
