--- a/project.html
+++ b/project.html
@@ -371,6 +371,7 @@
           </div>
         </div>
       </section>
+
       <section class="our-clients section-wrapper">
         <h1 class="our-clients__title">Наши клиенты</h1>
         <div class="our-clients__list">
@@ -426,7 +427,9 @@
           </div>
 
           <div class="our-clients__item">
-            <img src="./images/index/BKE.svg" alt="бке" width="280px" height="auto" />
+            <a href="./pdf/bke.pdf" target="_blank">
+              <img src="./images/index/BKE.svg" alt="бке" width="280px" height="auto" />
+            </a>
           </div>
 
           <div class="our-clients__item">
