--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
@@ -29,7 +29,7 @@
         <li class="nav__item">
           <img class="nav__close" src="./images/closeIconWhite.svg" alt="close icon" width="36px" height="36px" />
         </li>
-    
+
         <li class="nav__item">
           <span class="nav__number">/00</span>
           <a class="nav__link" href="#">Новости</a>
@@ -210,6 +210,38 @@
               ><img src="./images/index/rvp.svg" alt="РВП" width="151px" height="62px"
             /></a>
           </div>
+
+          <div class="our-clients__item">
+            <img src="./images/index/Sibur_Holding_Logo.svg" alt="сибур" width="240px" height="81px" />
+          </div>
+
+          <div class="our-clients__item">
+            <img src="./images/index/ENKA-logo-vector-02.svg" alt="енка" width="180px" ; height="auto" />
+          </div>
+
+          <div class="our-clients__item">
+            <img src="./images/index/Novatek_Logo_cyrillic.svg" alt="новатек" width="220px" height="auto" />
+          </div>
+
+          <div class="our-clients__item">
+            <img src="./images/index/SUEK_Logo_GREY.svg" alt="суек" width="220px" height="auto" />
+          </div>
+
+          <div class="our-clients__item">
+            <a href="./pdf/bke.pdf" target="_blank">
+              <img src="./images/index/BKE.svg" alt="бке" width="280px" height="auto" />
+            </a>
+          </div>
+
+          <div class="our-clients__item">
+            <img src="./images/index/EEC3.svg" alt="еэк" width="180px" height="auto" />
+          </div>
+          <div class="our-clients__item">
+            <img src="./images/index/INK.svg" alt="инк" width="180px" height="auto" />
+          </div>
+          <div class="our-clients__item">
+            <img src="./images/index/Eurochem_Logo-Rus_Horiz_black.svg" alt="еврохим" width="280px" height="auto" />
+          </div>
         </div>
       </section>
     </main>
@@ -239,11 +271,11 @@
               (m[i].a = m[i].a || []).push(arguments);
             };
           m[i].l = 1 * new Date();
-          (k = e.createElement(t)),
+          ((k = e.createElement(t)),
             (a = e.getElementsByTagName(t)[0]),
             (k.async = 1),
             (k.src = r),
-            a.parentNode.insertBefore(k, a);
+            a.parentNode.insertBefore(k, a));
         })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
 
         ym(77759518, 'init', {
