--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="./scripts/lib/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="./scripts/index.js"></script>
   </head>
-    
+
   <body class="background-page">
     <header class="header section-wrapper">
       <a class="header__logo" href="./index.html">
@@ -59,7 +59,7 @@
         <img class="title__teletower" src="./images/aboutUs/TeleTower.png" alt="TeleTower" />
         <h6 class="title">Услуги</h6>
         <p class="title__text">
-          Наш 15 летний опыт показывает, что не бывает двух одинаковых внедрений. Каждый проект уникален. Поэтому, перед
+          Наш 15-летний опыт показывает, что не бывает двух одинаковых внедрений. Каждый проект уникален. Поэтому, перед
           созданием архитектуры мы глубоко погружаемся в ожидания заказчика. Кроме того, всегда предлагаем несколько
           вариантов решений на выбор для наших клиентов, не только из существующего портфолио, но и лучшие практики из
           мирового опыта. Также наша компания готова предоставить вам эксклюзивные решения от наших партнеров.
@@ -510,7 +510,9 @@
           </div>
 
           <div class="our-clients__item">
-            <img src="./images/index/BKE.svg" alt="бке" width="280px" height="auto" />
+            <a href="./pdf/bke.pdf" target="_blank">
+              <img src="./images/index/BKE.svg" alt="бке" width="280px" height="auto" />
+            </a>
           </div>
 
           <div class="our-clients__item">
