--- a/services.html
+++ b/services.html
@@ -524,6 +524,21 @@
           <div class="our-clients__item">
             <img src="./images/index/Eurochem_Logo-Rus_Horiz_black.svg" alt="еврохим" width="280px" height="auto" />
           </div>
+          <div class="our-clients__item">
+            <img src="./images/index/ORT_Logo_PGB_1.svg" alt="1540RT" width="140px" height="auto" />
+          </div>
+
+          <div class="our-clients__item">
+            <img src="./images/index/PSB.svg" alt="PSB" width="200px" height="auto" />
+          </div>
+
+          <div class="our-clients__item">
+            <img src="./images/index/sinara-logo1.svg" alt="Sinara" width="260px" height="auto" />
+          </div>
+
+          <div class="our-clients__item">
+            <img src="./images/index/zarubezhneft.svg" alt="Zarubezhneft" width="260px" height="auto" />
+          </div>
         </div>
       </section>
     </main>
