поправил перенос м/р сделал опасити для зеленого фона на Продуктах

--- a/project.html
+++ b/project.html
@@ -148,7 +148,7 @@
                 ></div>
                 <div>
                   <p class="item__subtitle">Проект:</p>
-                  <h2 class="item__title">Напорный нефтепровод м/р Южное Хыльчую – БРП Варандей</h2>
+                  <h2 class="item__title">Напорный нефтепровод <nobr>м/р</nobr> Южное Хыльчую – БРП Варандей</h2>
                 </div>
                 <div class="item__footer">
                   <div class="item__info-list">
