корректировка фона и цвета текста

--- a/products.html
+++ b/products.html
@@ -58,46 +58,8 @@
       <section class="products section-center">
         <img class="title__teletower" src="./images/aboutUs/TeleTower.png" alt="TeleTower" />
         <h6 class="title">Продукты</h6>
-        <!-- <p class="title__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ea maiores quidem aperiam? Perferendis
-          veritatis, quae doloribus quisquam consequatur omnis voluptas dicta in hic, voluptatibus corrupti temporibus
-          fugit est molestiae officia quidem. Obcaecati voluptates expedita possimus eveniet veritatis recusandae
-          dolores provident nesciunt deleniti odit quod voluptatum, qui, sint ducimus nulla ratione deserunt quae quo
-          vitae asperiores officiis incidunt ex.
-        </p> -->
+        <!-- <p class="title__text">Lorem</p> -->
       </section>
-
-      <!-- <section class="solutions section-center">
-        <div class="solutions__item solutions__item-selected">
-          <div class="item__row">
-            <div class="item__title">
-              <span class="number">01/</span>
-              <p class="title">Мобильная автономная базовая станция</p>
-            </div>
-            <div class="item__buttons">
-              <div class="item__close"></div>
-              <div class="item__arrow"></div>
-            </div>
-          </div>
-          <div class="item__row2">
-            <div class="item__description">
-              <p class="item__text">
-                Мобильная автономная базовая станция (МАБС) предназначена для обеспечения бесперебойной работы активного
-                оборудования беспроводной связи, видеонаблюдения, телеметрии, метеорологии и др. функционала в удаленных
-                труднодоступных локациях, где отсутствует возможность подключения к энергосети или иным источникам
-                постоянного энергоснабжения.
-              </p>
-              <p class="item__text">
-                Мобильная автономная базовая станция (МАБС) предназначена для обеспечения бесперебойной работы активного
-                оборудования беспроводной связи, видеонаблюдения, телеметрии, метеорологии и др. функционала в удаленных
-                труднодоступных локациях, где отсутствует возможность подключения к энергосети или иным источникам
-                постоянного энергоснабжения.
-              </p>
-            </div>
-          </div>
-          <img src="./images/products/product1.jpg" alt="MABS" />
-        </div>
-      </section> -->
 
       <section class="product section-wrapper">
         <div class="product-item">
@@ -362,7 +324,6 @@
           <div class="our-clients__item">
             <img src="./images/index/PSB.svg" alt="PSB" width="200px" height="auto" />
           </div>
-
 
           <div class="our-clients__item">
             <img src="./images/index/sinara-logo1.svg" alt="Sinara" width="280px" height="auto" />
