--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </li>
         <li class="nav__item">
           <span class="nav__number">/00</span>
-          <a class="nav__link" href="#">Новости</a>
+          <a class="nav__link" href="./news.html">Новости</a>
         </li>
         <li class="nav__item">
           <span class="nav__number">/01</span>
