--- a/project.html
+++ b/project.html
@@ -65,6 +65,7 @@
     </header>
     <main>
       <section class="projects-list section-wrapper">
+        <!-- <img class="title__teletower" src="./images/aboutUs/TeleTower.png" alt="TeleTower" /> -->
         <h6 class="projects-list__title title">Наши<br />проекты</h6>
         <div class="projects-list__container">
           <div class="projects-list__item-wrapper">
