страничка новости выравнивание текста по левому краю в Продуктах

--- a/news.html
+++ b/news.html
@@ -35,7 +35,7 @@
         </li>
         <li class="nav__item">
           <span class="nav__number">/00</span>
-          <a class="nav__link" href="#">Новости</a>
+          <a class="nav__link" href="./news.html">Новости</a>
         </li>
         <li class="nav__item">
           <span class="nav__number">/01</span>
@@ -76,11 +76,11 @@
 
       <section class="news section-center">
         <div class="news__item">
-          <div class="logo">
-            <img class="logo-img" src="./images/index/logo_svyaz2026.png" alt="Связь 2026" />
-            <div class="logo-description">
-              <p class="logo-title">СВЯЗЬ 2026</p>
-              <p class="logo-text">7-10 апреля</p>
+          <div class="news__logo">
+            <img class="news__logo-img" src="./images/index/logo_svyaz2026.png" alt="Связь 2026" />
+            <div class="news__logo-description">
+              <p class="news__logo-title">СВЯЗЬ 2026</p>
+              <p class="news__logo-text">7-10 апреля</p>
             </div>
           </div>
           <div class="news__text">
@@ -94,11 +94,11 @@
         </div>
 
         <div class="news__item">
-          <div class="logo">
-            <img class="logo-img" src="./images/index/non SVG/MININGWORLD_RUSSIA_30.webp" alt="Майнинг 2026" />
-            <div class="logo-description">
-              <p class="logo-title">MiningWorld Russia 2026</p>
-              <p class="logo-text">22-24 апреля</p>
+          <div class="news__logo">
+            <img class="news__logo-img" src="./images/index/non SVG/MININGWORLD_RUSSIA_30.webp" alt="Майнинг 2026" />
+            <div class="news__logo-description">
+              <p class="news__logo-title">MiningWorld Russia 2026</p>
+              <p class="news__logo-text">22-24 апреля</p>
             </div>
           </div>
           <div class="news__text">
