исправил шрифт в новостях исправил адаптив мобилок

--- a/news.html
+++ b/news.html
@@ -89,7 +89,7 @@
               технологии» и представляет свой новый продукт <a class="news__link" href="./products.html">МАБС</a>.
             </p>
             <br />
-            <p class="news__address">ВК «Тимирязев Центр», залы «Вавилов», «Чаянов», «Немчинов»</p>
+            <p class="news__address">ВК «Тимирязев Центр», залы «Вавилов», «Чаянов», «Немчинов». Стенд 4Е128</p>
           </div>
         </div>
 
